# rust-api-template

./: Cargo.toml
config/: default.json
src/: main.rs  settings.rs
src/handlers/: api_handlers.rs  mod.rs  root_handlers.rs
src/routes/: api.rs
