[package]
name = "rust-api-template"
version = "0.1.0"
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.11.0"
serde_derive = "^1.0.8"
serde = "^1.0.8"
serde_json = "1.0"
actix-web = "3.3.2"
slog = "2.7.0"
slog-term = "2.8.0"